--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,3 +7,50 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+header{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2em;
+}
+
+header > ul {
+    width: 70vw;
+    height: 5em;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+
+    gap: 1em;
+    padding: 1em;
+
+    list-style: none;
+    background-color: grey;
+    border-radius: 0 1em;
+}
+
+header >section {
+    display: flex;
+    justify-content: center;
+    padding: 2em;
+    gap: 5em;
+    width: 100%;
+
+}
+
+header > section > article {
+    height: 30vh;
+    width: 40vw;
+    background-color: aqua;
+}
+
+header > section > article:first-child {
+    clip-path: polygon(0 0, 100% 28%, 100% 100%, 0% 100%);
+}
+
+header > section > article:last-child {
+    clip-path: polygon(0 28%, 100% 0%, 100% 100%, 0% 100%);
+}
