--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,6 @@
 :root{
-
+    --background-color: #070618;
+    --box-color: #1E1E1E;
 }
 
 *{
@@ -8,49 +9,72 @@
     box-sizing: border-box;
 }
 
-header{
+body{
+    background-color: var(--background-color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
+main{
+    background: linear-gradient(90deg, #FFFCFC, #9F9F9F);
+    border-radius: .5em;
+    padding: .5em;
+}
+
+main > section{
+    height: 80vh;
+    width: 70vw;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    gap: 2em;
-}
-
-header > ul {
-    width: 70vw;
-    height: 5em;
-
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-
     gap: 1em;
-    padding: 1em;
-
-    list-style: none;
-    background-color: grey;
-    border-radius: 0 1em;
-}
-
-header >section {
-    display: flex;
-    justify-content: center;
+    border-radius: .25em;
+    background-color: var(--box-color);
     padding: 2em;
-    gap: 5em;
+}
+
+/* the window */
+article:first-of-type{
+    height: 100px;
     width: 100%;
-
+    background: linear-gradient(90deg, #FFFCFC, #9F9F9F);
+    border-radius: .25em;
+    position: relative;
 }
 
-header > section > article {
-    height: 30vh;
-    width: 40vw;
-    background-color: aqua;
+article:first-of-type::before{
+    content: '';
+    position: absolute;
+    top: 5px;
+    left: 5px;
+    right: 5px;
+    bottom: 5px;
+    background: rgb(133, 208, 255);
+    border-radius: .25em;
+    z-index: 1;
 }
 
-header > section > article:first-child {
-    clip-path: polygon(0 0, 100% 28%, 100% 100%, 0% 100%);
+article:first-of-type::after{
+    content: '';
+    position: absolute;
+    top: 5px;
+    left: 5px;
+    right: 5px;
+    bottom: 5px;
+    background-image: url(../assets/reflection.svg);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    z-index: 2;
 }
 
-header > section > article:last-child {
-    clip-path: polygon(0 28%, 100% 0%, 100% 100%, 0% 100%);
+/* plate */
+
+article:nth-of-type(2){
+    height: 50%;
+    width: 100%;
+    background-color: #5D5C5C;
+    border-radius: .25em;
+    position: relative;
 }
