--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,6 +4,8 @@
 
     --plate-color-primary: #D9D9D9;
     --plate-color-secondary: #5D5C5C;
+
+    --radar-color: rgba(1, 204, 0, 1);
 }
 
 *{
@@ -27,8 +29,9 @@ main{
 }
 
 main > section{
+    position: relative;
     height: 80vh;
-    width: 70vw;
+    width: 60vw;
     display: flex;
     flex-direction: column;
     gap: 1em;
@@ -82,7 +85,37 @@ article:nth-of-type(2){
     position: relative;
 }
 
-article:nth-of-type(2)::after{
+
+/* screws */
+article:nth-of-type(2) > img:first-of-type{
+    position: absolute;
+    top: .3em;
+    left: .3em;
+}
+
+article:nth-of-type(2) > img:nth-of-type(2){
+    position: absolute;
+    top: .3em;
+    right: .3em;
+}
+
+article:nth-of-type(2) > img:nth-of-type(3){
+    position: absolute;
+    bottom: 0;
+    left: .3em;
+}
+
+article:nth-of-type(2) > img:last-of-type{
+    position: absolute;
+    bottom: 0;
+    right: .3em;
+}
+
+/* radar */
+/* https://www.plantcss.com/convert-svg-to-css-clip-path */
+/* https://developer.mozilla.org/en-US/docs/Web/CSS/gradient/conic-gradient */
+
+article:nth-of-type(2) > section::before{
     content: "";
     position: absolute;
     left: 50%;
@@ -96,28 +129,136 @@ article:nth-of-type(2)::after{
     background-color: var(--plate-color-primary);
 }
 
-
-/* screws */
-article:nth-of-type(2) img:first-of-type{
-    position: absolute;
-    top: .3em;
-    left: .3em;
+article:nth-of-type(2) > section{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 100%;
 }
 
-article:nth-of-type(2) img:nth-of-type(2){
+article:nth-of-type(2) > section div{
     position: absolute;
-    top: .3em;
-    right: .3em;
+    aspect-ratio: 1/1;
+    background-image: url(../assets/radar.svg);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 85%;
+    height: 85%;
+    max-width: fit-content;
 }
 
-article:nth-of-type(2) img:nth-of-type(3){
+/* radar sensor */
+article:nth-of-type(2) > section div::before{
+    content: "";
     position: absolute;
-    bottom: 0;
-    left: .3em;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    aspect-ratio: 1/1;
+
+    min-height: 50%;
+    min-width: 50%;
+    border-radius: 100%;
+    background: conic-gradient(rgba(255,255,255,0) 0%, rgba(255,255,255,0) 75%,  var(--radar-color) 100%);
+
+    animation: radar 2s linear infinite;
 }
 
-article:nth-of-type(2) img:last-of-type{
+/* radar objective */
+
+article:nth-of-type(2) > section div::after{
+    content: "";
     position: absolute;
-    bottom: 0;
-    right: .3em;
+    top: 60%;
+    left: 60%;
+
+    min-height: 5%;
+    min-width: 5%;
+    aspect-ratio: 1/1;
+    border-radius: 100%;
+    background: radial-gradient(rgba(255,255,255,0) 0%,  var(--radar-color) 100%);
+
+    animation: objective 2s ease-out infinite;
+}
+
+
+@keyframes radar{
+    0%{
+        transform: translate(-50%, -50%) rotate(0deg);
+    }
+    100%{
+        transform: translate(-50%, -50%) rotate(360deg);
+    }
+}
+
+@keyframes objective{
+    0%{
+        opacity: 1;
+    }
+
+    37%{
+        opacity: 0;
+    }
+
+    40%{
+
+        opacity: 1;
+    }
+
+
+    100%{
+        opacity: 1;
+    }
+}
+
+
+/* toggle switch */
+article:last-of-type label{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    position: absolute;
+    right: -4.3em;
+    top: 1em;
+    height: 3em;
+    width: 4em;
+
+    background-image: url(../assets/switchBolt.svg);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center left;
+}
+
+article:last-of-type label:before{
+    content: '';
+    position: absolute;
+    height: 100%;
+    width: 2.8em;
+    top: -2px;
+    left: 1em;
+    z-index: -1;
+    background-image: url(../assets/toggle.svg);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center left;
+
+    transform-origin: left center;
+    transform: rotate(20deg);
+    transition: transform .3s;
+}
+
+article:last-of-type label:has(input:checked)::before{
+    transform: rotate(-20deg);
+    transition: transform .3s;
+}
+
+article:last-of-type label input{
+    display: none;
+}
+
+article:last-of-type > div{
+    
 }
