--- a/styles/styles.css
+++ b/styles/styles.css
@@ -35,6 +35,7 @@ main > section{
     width: 60vw;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     gap: 1em;
     border-radius: .25em;
     background-color: var(--box-color);
@@ -257,6 +258,38 @@ article:nth-of-type(2) > section div::after{
     }
 }
 
+/* steering wheel */
+/* https://css-tricks.com/styling-cross-browser-compatible-range-inputs-css/ */
+
+/* slider */
+article:nth-of-type(3) input[type=range]{
+    -webkit-appearance: none; 
+    left: 50%;
+    transform: translateX(-50%);
+    position: absolute;
+    width: 80%; 
+    background: black;
+    border-radius: .5em;
+}
+
+article:nth-of-type(3) input[type=range]::-webkit-slider-thumb{
+    -webkit-appearance: none;
+    appearance: none;
+    width: 10em;
+    height: 8em;
+    margin-top: -6em;
+    background-image: url(../assets/steeringWheel.svg);
+    background-size: contain;
+    background-repeat: no-repeat;
+    cursor: grab;
+}
+
+article:nth-of-type(3) input[type=range]::-webkit-slider-thumb:active{
+    cursor: grabbing;
+}
+
+
+
 
 /* switch base*/
 article:last-of-type label{
@@ -274,6 +307,8 @@ article:last-of-type label{
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center left;
+
+    cursor: pointer;
 }
 
 /* switch toggle */
