--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,9 @@
+@font-face{
+    font-family: Courier-Prime;
+    src: url(../assets/fonts/CourierPrime-Bold.ttf);
+    weight: bold;
+}
+
 :root{
     --background-color: #070618;
     --box-color: #1E1E1E;
@@ -6,6 +12,8 @@
     --plate-color-secondary: #5D5C5C;
 
     --radar-color: rgba(1, 204, 0, 1);
+
+    --font-family: 'Courier-Prime', monospace;
 
 }
 
