--- a/styles/styles.css
+++ b/styles/styles.css
@@ -14,6 +14,9 @@
     --radar-color: rgba(1, 204, 0, 1);
 
     --font-family: 'Courier-Prime', monospace;
+    --filter: invert(0) grayscale(0) contrast(1) brightness(1);
+
+    --button-color: #4a96f3;
 
 }
 
@@ -50,8 +53,61 @@ main{
     }
 }
 
-/* the window */
 article:first-of-type{
+    display: flex;
+    justify-content: space-between;
+
+    > div:first-of-type {
+    background-color: var(--background-color);
+    color: var(--radar-color);
+    padding: .5em;
+    border-radius: .25em;
+    overflow: hidden;
+    height: 2.5rem;
+    width: 40%;
+    display: flex;
+    align-items: center;
+    position: relative;
+
+        > h1{
+            display: block;
+            font-family: var(--font-family);
+            text-transform: uppercase;
+            animation: 5s title infinite linear;
+            filter: drop-shadow(0 0 .5em var(--radar-color));
+            position: absolute;
+            left: 1em;
+            white-space: nowrap;
+        }
+    }
+
+    > div:last-of-type{
+        background-color: var(--background-color);
+        padding: .5em;
+        border-radius: .25em;
+
+        > label{
+            height: 2rem;
+            width: 2rem;
+            position: relative;
+            background-color: var(--button-color);
+        }
+    }
+
+
+}
+
+@keyframes title{
+    from{
+        transform: translateX(110%);
+    }
+    to{
+        transform: translateX(-110%);
+    }
+}
+
+/* the window */
+article:nth-of-type(2){
     height: 100px;
     width: 100%;
     background: linear-gradient(90deg, #FFFCFC, #9F9F9F);
@@ -80,14 +136,15 @@ article:first-of-type{
     }
 }
 
-article:first-of-type::before{
+article:nth-of-type(2)::before{
     content: '';
     position: absolute;
     top: 5px;
     left: 5px;
     right: 5px;
     bottom: 5px;
-    background-image: url(../assets/clouds.jpeg);
+    background-image: url(../assets/images/clouds.jpeg);
+    filter: var(--filter);
     background-size: 200%;
     background-repeat: no-repeat;
     background-position: calc(1% * var(--direction));
@@ -95,14 +152,14 @@ article:first-of-type::before{
     z-index: 1;
 }
 
-article:first-of-type::after{
+article:nth-of-type(2)::after{
     content: '';
     position: absolute;
     top: 5px;
     left: 5px;
     right: 5px;
     bottom: 5px;
-    background-image: url(../assets/reflection.svg);
+    background-image: url(../assets/images/reflection.svg);
     background-size: 100%;
     background-repeat: no-repeat;
     background-position: 0;
@@ -111,7 +168,7 @@ article:first-of-type::after{
 
 /* plate */
 
-article:nth-of-type(2){
+article:nth-of-type(3){
     height: 50%;
     width: 100%;
     background-color: var(--plate-color-secondary);
@@ -190,12 +247,12 @@ article:nth-of-type(2){
     > section div{
         position: absolute;
         aspect-ratio: 1/1;
-        background-image: url(../assets/radar2.svg);
+        background-image: url(../assets/images/radar2.svg);
         background-size: contain;
         background-repeat: no-repeat;
         background-position: center;
         background-color: rgba(14, 9, 46, .9);
-        clip-path: circle(7rem at 50% 50%);
+        clip-path: circle(clamp(3em, 18vw, 7.5em) at 50% 50%);
         width: 100%;
         height: 100%;
         max-width: fit-content;
@@ -241,7 +298,7 @@ article:nth-of-type(2){
 /* steering wheel */
 
 /* slider */
-article:nth-of-type(3){
+article:nth-of-type(4){
     & input[type=range]{
         -webkit-appearance: none; 
         left: 50%;
@@ -250,6 +307,7 @@ article:nth-of-type(3){
         width: 80%; 
         background: black;
         border-radius: .5em;
+        z-index: 3;
     }
 
     & input[type=range]::-webkit-slider-thumb{
@@ -258,7 +316,7 @@ article:nth-of-type(3){
         width: 10em;
         height: 8em;
         margin-top: -6em;
-        background-image: url(../assets/steeringWheel.svg);
+        background-image: url(../assets/images/steeringWheel.svg);
         background-size: contain;
         background-repeat: no-repeat;
         cursor: grab;
@@ -289,7 +347,7 @@ article:last-of-type{
         height: 3em;
         width: 4em;
     
-        background-image: url(../assets/switchBolt.svg);
+        background-image: url(../assets/images/switchBolt.svg);
         background-size: contain;
         background-repeat: no-repeat;
         background-position: center left;
@@ -306,7 +364,7 @@ article:last-of-type{
         top: -2px;
         left: 1em;
         z-index: -1;
-        background-image: url(../assets/toggle.svg);
+        background-image: url(../assets/images/toggle.svg);
         background-size: contain;
         background-repeat: no-repeat;
         background-position: center left;
@@ -323,7 +381,7 @@ article:last-of-type{
         right: 1em;
         height: 2em;
         width: 2.5em;
-        background-image:url(../assets/bolt.svg);
+        background-image:url(../assets/images/bolt.svg);
         background-size: contain;
         background-repeat: no-repeat;
         background-position: bottom center;
@@ -347,12 +405,12 @@ article:last-of-type{
 
 /* Switch interactions */
 
-html:has([value="switch"]:checked) {
-	--switch:true;
+html:has([value="wipers"]:checked) {
+	--wipers:true;
 }
 
-@container style(--switch:true){
-    section article:first-of-type img{
+@container style(--wipers:true){
+    section article:nth-of-type(2) img{
         animation-play-state: running !important;
     }
 
@@ -365,6 +423,16 @@ html:has([value="switch"]:checked) {
             transform: rotate(-20deg);
             transition: transform .3s;
         }
+    }
+}
+
+html:has([value="darkmode"]:checked){
+    --darkmode:true;
+}
+
+@container style(--darkmode:true){
+    article:nth-of-type(2)::before{
+        filter: invert(1) grayscale(.8) contrast(1.2) brightness(1.2);
     }
 }
 
