--- a/styles/styles.css
+++ b/styles/styles.css
@@ -125,14 +125,6 @@ article:first-of-type {
 
             transition: transform 0.1s;
 
-            /* move the button down when clicked */
-            &:has(input:checked) {
-                transform: translateY(1px);
-
-                box-shadow: none;
-                transition: transform 0.1s;
-            }
-
             /* top of button */
             &:before {
                 content: "";
@@ -147,7 +139,8 @@ article:first-of-type {
             }
 
             /* moon emoji */
-            > span {
+            &:after {
+                content: "🌙";
                 position: absolute;
                 top: 50%;
                 left: 50%;
@@ -823,6 +816,13 @@ html:has([value="darkmode"]:checked) {
     article:nth-of-type(2)::before {
         filter: invert(1) grayscale(0.8) contrast(1.2) brightness(0.8);
         transition: filter 0.3s;
+    }
+
+    article:first-of-type > div:last-of-type > label:first-of-type{
+        transform: translateY(1px);
+
+        box-shadow: none;
+        transition: transform 0.1s;
     }
 
     article:first-of-type > div:last-of-type > label:first-of-type + div {
