--- a/styles/styles.css
+++ b/styles/styles.css
@@ -680,6 +680,7 @@ article:nth-of-type(3) {
 /* steering wheel */
 article:nth-of-type(4) {
     & input[type="range"] {
+        appearance: none;
         -webkit-appearance: none;
         left: 50%;
         transform: translateX(-50%);
